# sub

./: .env.example  1  README.md  index.html  package.json  server.js  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
server/: Cargo.toml  Dockerfile  улучшения.txt
server/src/: main.rs
src/: App.tsx  index.css  vite-env.d.ts
src/components/: CreateEntryModal.tsx  EntriesList.tsx  EntryCard.tsx  EntryMenu.tsx  EntryTags.tsx  FilterButton.tsx  FilterDropdown.tsx  FilterSelector.tsx  FloatingCreateButton.tsx  Header.tsx  LanguageModal.tsx  LoginModal.tsx  MenuDropdown.tsx  SearchBar.tsx  SortBar.tsx
src/data/: cities-en.ts  cities-ru.ts  genders-en.ts  genders-ru.ts  types-en.ts  types-ru.ts
src/hooks/: index.ts  useInView.ts
src/lib/: config.ts  i18n.ts  indexeddb.ts  p2p-client.ts  telegram.ts  wasm-api.ts
src/locales/: en.json  ru.json
src/store/: index.ts
src/types/: index.ts
src/utils/: api.ts
wasm/: Cargo.toml  build.sh  wasm.txt
wasm/src/: lib.rs
