[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly engine for managing social media posts"
repository = "https://github.com/yourusername/wasm-engine" # Замените на ваш репозиторий
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
lz4_flex = "0.11"
bincode = "1.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbRequest",
  "IdbTransaction",
  "Window",
  "WebSocket",
  "MessageEvent",
  "BinaryType",
]